# CourseFuzz

./: .dockerignore  .env.example  .gitignore  .impeccable.md  Dockerfile  LICENSE  README.md  ablation_report.md  bash.exe.stackdump  compose.yaml  pyproject.toml  release_manifest.json  render.yaml  requirements.txt
docs/: ARCHITECTURE.md  DEMO_RUNBOOK.md  DEPLOYMENT.md  EDGE_CASE_MATRIX.md  EVALUATION.md  HACKATHON_SUBMISSION.md  NEXT_STEPS.md  PRODUCT_SPEC.md  SANDBOX.md  SECURITY.md  video_walkthrough.html
evaluations/: README.md  __init__.py  cases.py  frozen_expectations.json  real_corpus.py  real_scoring.py  runner.py
examples/: github-demo-assignment.json
scripts/: collect_real_corpus.py  e2e_real_data_verification.py  frontend_contract_test.py  generate_real_candidates.py  load_test_100M.py  load_test_backend_frontend.py  load_test_simulation.py  migrate.py  prepare_real_evaluation.py  release_guard.py  restore_drill.py  run_active_ablations.py  run_demo_benchmark.py  run_frozen_benchmark.py  scrape_assignments.py  verify_real_manifest.py
tests/: test_access_control.py  test_api_golden_path.py  test_approval_binding.py  test_assignment_ingestion.py  test_config.py  test_deep_engineering.py  test_docker_isolated_runner.py  test_engine.py  test_evaluation_contract.py  test_event_stream_resume.py  test_evidence_bundle.py  test_exactly_once.py  test_example_manifest.py  test_execution_gateway.py  test_external_ci_readback.py  test_generators.py  test_github_app_credentials.py  test_github_destination.py  test_github_importer.py  test_github_oauth.py  (+19 more)
(+67 files in other folders)
