[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "coursefuzz"
version = "0.2.0"
description = "Execution-backed autograder red-team and repair system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "cryptography>=45,<47",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "openai>=1.66,<3",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.11,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]
evaluation = [
  "duckdb>=1.5.4,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/coursefuzz"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
